tests/regression/baselines/err_mixed_tuple_record_duplicates.expected
ERROR
SyntaxError: Repeated field name
// Should catch field conflicts between explicit and tuple syntax
{_0 = 1; _0 = 2; x = 3}
         ^~             
Note: Field was already defined here
// Should catch field conflicts between explicit and tuple syntax
{_0 = 1; _0 = 2; x = 3}
 ^~                     
